<!--
  ~ Copyright 2018 The android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by androidlicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <EditTextPreference
            android:key="signature"
            android:title="@string/signature_title" />

        <ListPreference
            android:defaultValue="reply"
            android:entries="@array/reply_entries"
            android:entryValues="@array/reply_values"
            android:key="reply"
            android:title="@string/reply_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:key="notify"
            android:title="@string/notify_title"
            android:summary="@string/notify_summary"/>

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="ringtone"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/notify_sound_title"
            android:summary="@string/notify_sound_summary"/>

        <ListPreference
            android:key="led"
            android:entries="@array/LEDColors"
            android:entryValues="@array/LEDColors_values"
            android:title="@string/notify_led_title"
            android:summary="@string/notify_led_summary"/>

        <SwitchPreference
            android:key="vibrations"
            android:title="@string/notify_vibrations_title"
            android:summary="@string/notify_vibrations_summary"/>

    </PreferenceCategory>

</PreferenceScreen>
